# dora-streamlit

./: Dockerfile  README.md  Welkom.py  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  st_app.py
pages/: 01_Inloggen.py  02_Chat.py  03_Taak_Bewerken.py
streamlit_mods/: app_layout.py  endpoints.py
streamlit_mods/components/: main_screen.py  miscellaneous.py
streamlit_mods/components/chat_screen/: chat_screen.py  sidebar.py
streamlit_mods/components/login_screen/: __init__.py  login_screen.py
streamlit_mods/components/text_edit_screen/: text_edit_screen.py
streamlit_mods/helpers/: file_helper.py  message_helper.py  message_type.py  session_state_helper.py
